--- a/jukebox2.html
+++ b/jukebox2.html
@@ -37,14 +37,23 @@
             </div>
     </header>
     <div class="searchbar">
-        <input type="text" class="input" value="song, artist, album...">
+        <input type="text" id="input" placeholder="song, artist, album...">
     </div>
     <div class="button-obj">
-        <button class="searchbutton">Search for Music</button>
+        <button class="searchbutton" onclick="jukebox.search();">Search Trackname</button>
+        <button class="searchbutton2" onclick="jukebox.searchgenre();">Search by Genre</button>
+        <button class="searchbutton3" onclick="jukebox.searchtrackid();">Search by Track ID</button>
     </div>
     <button id="play" onclick="jukebox.play();">Play</button>
     <button id="pause" onclick="jukebox.pause();" ">Pause</button>
     <button id="stop " onclick="jukebox.stop(); "">Stop</button>
+    </div>
+    <div id="results-container">
+        <div id="results-box">
+            <p id="results-description">
+                <strong> Search Results</strong>
+            </p>
+        </div>
     </div>
     <script type="text/javascript">
     //var initialize = function initialize() {
@@ -52,17 +61,106 @@
     //        client_id: f665fc458615b821cdf1a26b6d1657f6
     //    })
     //};
-
+    var searchterm = null;
+    var musicobject;
     jukebox = {
         search: function() {
+            var searchterm = document.getElementById("input").value;
             SC.get("/tracks", {
-                q: " "
+                q: searchterm
             }).then(function(response) {
-                // things to do after the tracks load...
-                console.log(response);
-            });
+                    musicobject = response;
+
+                    for (i = 0; i < musicobject.length; i++) {
+                        console.log("hello");
+                        console.log(musicobject[i]);
+                        console.log(musicobject[i].id);
+                        console.log(musicobject[i].title);
+                        var trackid = musicobject[i].id;
+                        trackname = musicobject[i].title;
+                        var para = document.createElement('p');
+                        var songinfo = document.createTextNode(trackname + ", " + trackid);
+                        para.appendChild(songinfo);
+                        document.getElementById("results-box").appendChild(para);
+                    }
+                    //console.log(musicobject[i].id)
+                }
+                //document.getElementById("results-description").innerHTML = musicobject[0].id;
+                //musicobject = response;
+                //console.log(musicobject[i].id);
+                //console.log(response);
+
+            );
+        },
+        searchgenre: function() {
+            var searchterm = document.getElementById("input").value;
+            SC.get("/tracks", {
+                q: searchterm
+            }).then(function(response) {
+                    musicobject = response;
+
+                    for (i = 0; i < musicobject.length; i++) {
+                        console.log("hello");
+                        //console.log(musicobject[i]);
+                        console.log(musicobject[i].id);
+                        //console.log(musicobject[i].title);
+                        console.log(musicobject[i].genre);
+                        var trackid = musicobject[i].id;
+                        trackname = musicobject[i].title;
+                        genre = musicobject[i].genre;
+                        var para = document.createElement('p');
+                        var songgenre = document.createTextNode(genre + ", " + trackid + ", "+trackname);
+                        para.appendChild(songgenre);
+                        document.getElementById("results-box").appendChild(para);
+                    }
+                    //console.log(musicobject[i].id)
+                }
+                //document.getElementById("results-description").innerHTML = musicobject[0].id;
+                //musicobject = response;
+                //console.log(musicobject[i].id);
+                //console.log(response);
+
+            );
+        },
+        searchtrackid: function() {
+            var searchterm = document.getElementById("input").value;
+            SC.get("/tracks", {
+                q: searchterm
+            }).then(function(response) {
+                    musicobject = response;
+
+                    for (i = 0; i < musicobject.length; i++) {
+                        console.log("hello");
+                        console.log(musicobject[i]);
+                        console.log(musicobject[i].id);
+                        console.log(musicobject[i].title);
+                        var trackid = musicobject[i].id;
+                        trackname = musicobject[i].title;
+
+                        var para = document.createElement('p');
+                        var songinfo = document.createTextNode(trackid + ", " + trackname);
+                        para.appendChild(songinfo);
+                        document.getElementById("results-box").appendChild(para);
+
+                    }
+                    //console.log(musicobject[i].id)
+                }
+                //document.getElementById("results-description").innerHTML = musicobject[0].id;
+                //musicobject = response;
+                //console.log(musicobject[i].id);
+                //console.log(response);
+
+            );
         },
 
+
+        returnresults: function() {
+            //document.getElementById("returnresults").innerHTML =
+            for (i = 0; i <= musicobject.length; i++) {
+                document.getElementById("returnresults").innerHTML =
+                    musicobject[i].title;
+            }
+        },
 
         play: function() {
             SC.stream('/tracks/124861366').then(function(player) {
