--- a/jukebox2.html
+++ b/jukebox2.html
@@ -54,6 +54,7 @@
                 <strong> Search Results</strong>
             </p>
         </div>
+        <!--<img src="">-->
     </div>
     <script type="text/javascript">
     //var initialize = function initialize() {
@@ -81,7 +82,17 @@
                         var para = document.createElement('p');
                         var songinfo = document.createTextNode(trackname + ", " + trackid);
                         para.appendChild(songinfo);
-                        document.getElementById("results-box").appendChild(para);
+                        if (createdp == true) {
+                            var link = document.createElement('a');
+                            var linkText = songinfo;
+                            link.appendChild(linkText);
+                            link.title = "songinfo";
+                            link.href = "";
+                            link.appendChild(songinfo);
+                            document.getElementById("results-box").appendChild(link)
+                        }
+                        var createdp = document.getElementById("results-box").appendChild(para);
+                        
                     }
                     //console.log(musicobject[i].id)
                 }
@@ -109,7 +120,7 @@
                         trackname = musicobject[i].title;
                         genre = musicobject[i].genre;
                         var para = document.createElement('p');
-                        var songgenre = document.createTextNode(genre + ", " + trackid + ", "+trackname);
+                        var songgenre = document.createTextNode(genre + ", " + trackid + ", " + trackname);
                         para.appendChild(songgenre);
                         document.getElementById("results-box").appendChild(para);
                     }
@@ -124,7 +135,7 @@
         },
         searchtrackid: function() {
             var searchterm = document.getElementById("input").value;
-            SC.get("/tracks", {
+            SC.get("/tracks"+searchterm, {
                 q: searchterm
             }).then(function(response) {
                     musicobject = response;
@@ -136,7 +147,6 @@
                         console.log(musicobject[i].title);
                         var trackid = musicobject[i].id;
                         trackname = musicobject[i].title;
-
                         var para = document.createElement('p');
                         var songinfo = document.createTextNode(trackid + ", " + trackname);
                         para.appendChild(songinfo);
@@ -163,7 +173,8 @@
         },
 
         play: function() {
-            SC.stream('/tracks/124861366').then(function(player) {
+
+            SC.stream('/tracks/' + trackid).then(function(player) {
                 player.play();
             })
         }
