--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
     </header>
     <div class="gif_border">
-    <img id="giphy" src="http://media.giphy.com/media/l3q2DScd44jwBjpSg/giphy.gif">
+    <img id="giphy" src="headphones.gif">
     </div>
     <div class="searchbar">
         <input type="text" id="input" placeholder="song, artist, album...">
